<resources>
    <string name="app_name">TestMessageApp</string>
    <string name="please_wait">please wait ...</string>

    <string name="message_empty_error">Message cannot be empty</string>
    <string name="no_contacts">No contacts are added in message box</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="import_contact">Imported 123 contacts</string>
    <string name="choose_the_file">Choose the file</string>
    <string name="btn_browse">Browse</string>
    <string name="btn_send">Send</string>
    <string name="time_in_sec">Time in sec</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="interval">Interval:</string>
</resources>
