<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.HomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/choose_the_file"
                android:textColor="@color/colorBlack"

                android:textSize="20dp" />

            <Button
                android:id="@+id/btnBrowse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="left"
                android:background="@drawable/back_btn"
                android:elevation="3dp"
                android:text="@string/btn_browse"
                android:textColor="@color/colorWhite" />
        </RelativeLayout>

        <TextView
            android:id="@+id/importedContacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/import_contact"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"

            android:text="Available variables {firstname};{firstname}"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/enter_your_message"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="enter your text" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"

            android:layout_height="150dp"
            android:orientation="vertical"
            android:visibility="gone">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/interval"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:layout_marginLeft="5dp"
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:checked="true"
                    android:text="Time" />

                <RadioButton
                    android:id="@+id/radioRandom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Random" />
            </RadioGroup>

            
            <LinearLayout
                android:layout_alignParentRight="true"
                android:orientation="vertical"
                android:layout_width="200dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/timeInSec"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:hint="@string/time_in_sec"
                    android:inputType="number" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText

                        android:id="@+id/from"
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_below="@+id/timeInSec"
                        android:layout_marginRight="20dp"
                        android:layout_toLeftOf="@+id/to"
                        android:hint="@string/from"
                        android:inputType="number" />
                    <EditText
                        android:id="@+id/to"
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/timeInSec"
                        android:layout_marginRight="70dp"
                        android:hint="@string/to"

                        android:inputType="number" />

                </LinearLayout>
            </LinearLayout>
            




        </RelativeLayout>

        <Button

            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:background="@drawable/back_btn"
            android:text="@string/btn_send"
            android:textColor="@color/colorWhite" />
    </LinearLayout>


</LinearLayout>